test/ns3.l1.out
error: invalid raw symbol table
	#0                 mknsraw	(builtin function)
	#1                   entry	(ns3.l1:3)
